Release v1.3.1-snapshot-2
  - The version is now shown in the title of the window of the gui version
  - Developers:
    - Wrote much needed Unit Tests
    - Added exceptions where they were needed (invalid arguments, etc.)
  - Modmakers:
    - Added Player#isAchievementEarned(String name) so modmakers can see if the player has a specific achievement (usually as a requirement for something else).
    - Player#calculateTotalProtection() now returns protection instead of only setting the totalProtection variable.
    - Player#calculateStrength() now returns the new strength instead of only setting the strength variable.
    - The fists weapon (when no weapon) always exists and cannot be broken (cannot be set to breakable by mods)
    - Fixed bug that caused enemy actions to never have requirements
    - Added getDurability method to Armor

Release v1.3.1-snaphot-1
  - Fixed crash on installation caused by missing file.
  - For modmakers:
    - Updated the documentation (It was a few versions behind, although not much had changed);
    - Added a guide compiler for mod makers
      - Adds vanilla textfighter guide files to (intentionally) missing guide files.
      - Run the jar with the `compileguide` argument to add vanilla textfighter guide files.
	  - The mod must be selected and the copied guide files will be put into the mod folder.
    - Removed .txt extension from all vanilla guide files to improve aesthetics of the guide tab (modmakers must do the same in order for the mod to function)
  - Vanilla TextFighter:
    - Fixed losing all coins, magic points, metal scraps when dying (players should lose half)
	- Fixed the accidental changing difficulty of an enemy during a fight as health decreased
	- Updated the outdated information in the help location
	- Fixed a few typos in the vanilla guide

Release v1.3
  - Log files are only written to if an error occurred