@@ -50,6 +50,9 @@
                             <mainClass>com.seanjohnson.textfighter.TextFighter</mainClass>
                         </manifest>
                     </archive>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
                 </configuration>
                 <executions>
                     <execution>
